[gd_scene load_steps=2 format=2]

[ext_resource path="res://Inbox.gd" type="Script" id=1]

[node name="Inbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 638.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 631.0
margin_bottom = 1073.0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 624.0
margin_bottom = 944.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 624.0
margin_bottom = 944.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 948.0
margin_right = 624.0
margin_bottom = 1066.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 642.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="InfoCont" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 1278.0
margin_bottom = 107.0
size_flags_horizontal = 11
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/InfoCont"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1271.0
margin_bottom = 100.0

[node name="WeekLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoCont/HBoxContainer"]
margin_right = 630.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
valign = 1

[node name="BalanceLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoCont/HBoxContainer"]
margin_left = 634.0
margin_right = 1264.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 2
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 1278.0
margin_bottom = 968.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="Body" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1271.0
margin_bottom = 850.0

[node name="ReplyButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 972.0
margin_right = 1278.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reply"

[node name="Time" type="Timer" parent="."]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ReplyButton" to="." method="_on_ReplyButton_pressed"]
[connection signal="timeout" from="Time" to="." method="_on_Time_timeout"]
